<resources>
    <!--<string name="app_name">Portfolio</string>-->

    <string name="progress_button">1. Progress Button</string>
    <string name="progress_button_download">Download</string>
    <string name="progress_button_downloading">Downloading</string>
    <string name="progress_button_downloaded">Downloaded</string>
    <string name="edit_text_button">2. Edit Text</string>
    <string name="login">Login</string>

    <!---->
    <string name="tab_title_first">Home</string>
    <string name="tab_title_two">Diary</string>
    <string name="tab_title_dna_report">DNA Report</string>
    <string name="tab_title_my_coach">My Coach</string>
    <string name="tab_title_more">More</string>
    <string name="bottom_tab">3. Bottom Tab</string>
    <!---->

    <!---->
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="fragment_4">Fragment 4</string>
    <!---->

    <!---->
    <string name="mvp_practice">4. MVP Practice</string>
    <string name="loading">Loading…</string>
    <string name="empty">You don\'t have counters yet :(</string>
    <string name="add_counter">Add Counter</string>
    <string name="rxjava_retrofit_1">5. RxJava Retrofit 1</string>
    <string name="round_image_view">6. Round Image View</string>
    <!---->

    <!---->
    <string name="card_front">Front</string>
    <string name="card_back">Back</string>
    <string name="flip_card">7. Flip Card</string>
    <string name="activity_transition">8. Activity transition</string>
    <string name="transition_b">fab_button</string>
    <string name="dagger2_with_github">9. Dagger2 with Github service</string>

    <string name="rx_java_example">10. RxJava Example</string>
    <string name="rx_java_create">1. Create</string>
    <string name="rx_java_map">2. Map</string>
    <string name="rx_java_flat_map">3. FlatMap</string>
    <string name="rx_java_concat_map">4. Concat</string>
    <string name="tab_layout">11. tab layout</string>
    <string name="broadcast_receiver">12. Broadcast Receiver</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="show_notification">Show Notification</string>
    <string name="sqlite">13. Sqlite</string>
    <string name="service">14. Service</string>
    <string name="parcelable">15. Parcelable</string>
    <string name="bottom_dialog">16. BottomDialog</string>
    <string name="male_or_female">Male or Female</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="name">name</string>
    <string name="submit">Submit</string>
    <string name="bottom_alert">Alert</string>
    <string name="bottom_dialer">Dialer</string>
    <string name="throttle">5. throttle</string>
    <string name="merge">6. Merge example</string>
    <string name="routing_page">17. Routing page</string>
    <string name="drawer">18. Drawer</string>

    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="continuous_download">19. Continuous Download</string>
    <string name="update_progress_desc">Update progress bar</string>

    <string name="async_task">Async Task(rotatable)</string>
    <string name="intent_service">Intent Service(rotatable)</string>
    <string name="time_interval">Time Interval(not rotatable)</string>
    <string name="delay_emit">Delay emit(not rotatable)</string>
    <string name="custom_iterator">Custom Iterator(rotatable)</string>

    <string-array name="updaterType">
        <item>@string/async_task</item>
        <item>@string/intent_service</item>
        <item>@string/time_interval</item>
        <item>@string/delay_emit</item>
        <item>@string/custom_iterator</item>
    </string-array>

    <string name="track_leaks">Check memory leak</string>
    <string name="event_bus_main_title">20. EventBus Main</string>
    <string name="dagger2_example">21. Dagger2 example</string>
    <string name="recycler_view_example">22. My recycler view</string>
    <string name="fragment_tab_host"><![CDATA[23. FragmentTabHost ->4.0]]></string>
    <string name="weather">24. weather</string>
    <string name="mix_recycler_view">25. Mix recyclerview</string>

    <!--Icon for weather-->
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="blank">Blank</string>
    <string name="fragment_with_anim">26. FragmentWithAnim</string>
    <string name="activity_transition_1">27. Activity transition 1</string>
    <string name="fab_and_snackbar">28. fab and snackbar</string>
    <string name="show_snackbar">Show Snackbar</string>
    <!---->

    <!---->
    <string name="fab_follows_widget">29. fab follows widget</string>
    <string name="first">First Card</string>
    <string name="second">Second Card</string>
    <string name="third">Third Card</string>
    <string name="collapse_string"></string>
    <string name="long_latin">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <!---->

    <string name="toolbar">Toolbar</string>

    <!---->
    <string name="zip">7. zip</string>
    <string name="concat">8. concat</string>
    <string name="distinct">9. Distinct</string>
    <string name="filter">10. Filter</string>
    <string name="buffer">11. Buffer</string>
    <string name="timer">12. timer</string>
    <string name="interval">13. Interval</string>
    <string name="do_on_next">14. Do on next</string>
    <string name="skip">15. skip</string>
    <string name="take">16. take</string>
    <string name="single">17. Single</string>
    <string name="debounce">18. debounce</string>
    <string name="reduce">19. Reduce</string>
    <string name="scan">20. Scan</string>
    <string name="collapsing_example">30. Collapsing layout</string>
    <string name="rx_pagination">31. Rx pagination</string>
    <string name="custom_view">32. Custom View</string>
    <string name="custom_view_example">32. Custom View Example</string>
    <string name="intent_service_1">33. IntentService</string>
    <string name="merge_view_stub">34. Merge ViewStub</string>
    <string name="basic_service">35. Basic Activity</string>
    <string name="open_view_pager">36. View pager</string>
    <string name="open_touch_intercept">37. touch intercept</string>

    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="interact_with_service">Interact with service</string>
    <string name="invoke_service_methods">Invoke service methods</string>
    <!---->

    <string name="iap_promote_title_a">Make Your Home Screen Ad-Free</string>
    <string name="iap_promote_title_b">Save Photos without Ads</string>
    <string name="iap_promote_title_c">No More Ads after Lucky Draw</string>
    <string name="iap_promote_title_d">Close the App without Pop-ups!</string>
    <string name="iap_promote_title_e">You can save photos in highest resolutions</string>
    <string name="iap_promote_title_f">Unlimited object removal</string>
    <string name="iap_promote_title_hint">Buy once to have following features:</string>
    <string name="iap_promote_title_header">Upgrade to PRO</string>
    <string name="iap_promote_sub_title">*YouCam Apps and events not included</string>
    <string name="backpresure">21.backpressure</string>
    <string name="open_coordiante_layout">38. Coordinator</string>
</resources>
